# ml-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ml_lab/: __init__.py  cli.py  credentials.py  server.py
src/ml_lab/backends/: __init__.py  base.py  local.py  mistral_api.py  openai_api.py  together_api.py  vertex_api.py
src/ml_lab/cloud/: __init__.py  base.py  lambda_labs.py  modal_provider.py  remote_vps.py  runpod.py
src/ml_lab/evals/: __init__.py  benchmarks.py
src/ml_lab/inference/: __init__.py  ollama.py  openwebui.py  thinking.py
src/ml_lab/integrations/: __init__.py  codex.py
src/ml_lab/security/: __init__.py  audit.py
src/ml_lab/storage/: __init__.py  datasets.py  experiments.py
tests/: __init__.py  test_credentials.py
